# baseline

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  alembic.ini  personal-physiological-os-prd.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
docs/: demo-walkthrough.md  docs-consistency-checklist.md
infra/: docker-compose.yml
scripts/: check_docs.py  run_task_loop.py
tasks/: P0-01-repo-scaffold.md  P0-02-data-model-migrations.md  P0-03-synthetic-fixtures.md  P0-04-api-contracts-schemas.md  P0-05-safety-privacy-design.md  P0-06-observability-redaction.md  P0-07-eval-harness-scaffold.md  P1-01-health-sync-api.md  P1-02-normalization-module.md  P1-03-backfill-data-quality.md  P1-04-ios-healthkit-sync.md  P2-01-checkin-api-redaction.md  P2-02-feature-engine-sleep-cardio.md  P2-03-feature-engine-load-density.md  P2-04-feature-golden-tests.md  P2-05-ios-checkin-goals-ui.md  P3-01-goal-management.md  P3-02-reasoning-engine.md  P3-03-reasoning-golden-scenarios.md  P3-04-llm-orchestrator.md  P3-05-safety-policy-engine.md  P3-06-daily-briefing-assembly.md  P3-07-assistant-qa.md  P3-08-ios-briefing-trace-ui.md  P4-01-memory-daily-weekly.md  P4-02-memory-monthly-quarterly.md  P4-03-feedback-outcome-loop.md  P4-04-data-controls-consent.md  P5-01-knowledge-corpus.md  P5-02-knowledge-retrieval-citations.md  P5-03-eval-ops-dashboard.md  P5-04-cost-latency-fallback.md  P6-01-demo-mode-leak-tests.md  P6-02-portfolio-docs.md  README.md  ledger.json  prompt-pack.schema.json  review-decision.schema.json
(+256 files in other folders)
