[project]
name = "baseline"
version = "0.1.0"
description = "Private physiological decision-support system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.0",
  "arq>=0.26.3",
  "fastapi>=0.124.4",
  "pydantic-settings>=2.12.0",
  "psycopg[binary]>=3.3.2",
  "sqlmodel>=0.0.27",
  "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
  "coverage[toml]>=7.13.0",
  "httpx>=0.28.1",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.9",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["apps/api"]
include = ["baseline_api*"]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
addopts = "--strict-config --strict-markers --cov=baseline_api --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["baseline_api"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps/api"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["apps/api"]
files = ["apps/api/baseline_api"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["arq.*"]
ignore_missing_imports = true
